# lish

./: .gitignore  CHANGELOG.md  Notes.org  README.md  lish.cabal  package.yaml  stack.yaml
examples/: higher-order.lsh  recursive-fn.lsh  strict-fn.lsh
lish/: core.lsh
src-exe/: Main.hs
src-test/: Main.hs
src-test/Lish/Test/: Parser.hs
src/Data/: Stack.hs
src/Lish/: Balanced.hs  Core.hs  Eval.hs  InternalCommands.hs  Parser.hs  Types.hs
