name:                lish
version:             0.1.0.0
-- synopsis:
description:         LISP Shell written in Haskell

license:             ISC
license-file:        LICENSE
author:              Yann Esposito
maintainer:          yann.esposito@gmail.com
copyright:           © 2017 Yann Esposito
homepage:            https://github.com/yogsototh/lish
bug-reports:         https://github.com/yogsototh/lish/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/yogsototh/lish

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Lib
                   , Lish.Core
                   , Lish.InternalCommands
                   , Lish.Parser
                   , Lish.Types
  build-depends:     base >= 4.8 && < 5
                   , haskeline
                   , parsec >= 3 && < 4
                   , pipes
                   , protolude
                   , process
                   , text

executable lish-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , lish

test-suite lish-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , lish

test-suite lish-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , lish

benchmark lish-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , lish
